@@ -1,1 +1,2 @@
 debian/local/sysfs.conf.5
+debian/local/update-sysfs.8
